--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@ body {
     font-family: 'Scheherazade New', serif;
     cursor: default;
     background-color: #f2f9f1;
-    /* A soft, light background */
 }
 
 .hero {
@@ -68,4 +67,27 @@ h2 {
 .btn-warning:hover {
     background-color: #b5912e;
     border-color: #b5912e;
+}
+
+
+
+.section-title {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #ddd;
+}
+
+.instructor-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+@media (min-width: 992px) {
+    .sticky-sidebar {
+        position: sticky;
+        top: 95px;
+    }
 }
